--- a/MyCrush/app/src/main/res/layout/app_bar_main.xml
+++ b/MyCrush/app/src/main/res/layout/app_bar_main.xml
@@ -8,15 +8,13 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.MyCrush.AppBarOverlay">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.MyCrush.PopupOverlay" />
+            android:background="#00FFF7"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
