--- a/MyCrush/app/src/main/res/values/colors.xml
+++ b/MyCrush/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FF5171</color>
     <color name="purple_500">#FF5171</color>
-    <color name="purple_700">#00FFF7</color>
+    <color name="purple_700">#000</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFFFF</color>
